# easypayments_site

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  get_token.py  init_db.sh  logging.ini  pyproject.toml
config/: nginx-local.conf
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: deployment.yaml  pvc.yaml  service.yaml
migrations/: env.py
migrations/versions/: 2025_12_22_1157-f3357a8d8403_.py  2025_12_22_1609-0fafbbea2d4d_.py
src/: main.py
src/api/: __init__.py  dto.py  schemas.py
src/api/admin/: categories.py  comments.py  telegram_pushes.py
src/api/common/: crud_router.py
src/api/permissions/: auth.py
src/api/public/: comments.py  forms.py  leads.py
src/application/: builders.py  constants.py
src/application/messages/: telegram.py
src/application/use_cases/common/: crud.py
src/application/use_cases/forms/: submit_form.py
src/application/use_cases/leads/: submit_leadmagnit.py  submit_leadmagnit_company.py  submit_newsletter.py
src/common/: exceptions.py
src/config/: app_factory.py  containers.py  exceptions.py  loggers.py  settings.py  uptrace.py
src/domain/: exceptions.py
src/domain/entities/: comment.py  entity.py  enums.py  form_order.py  leadmagnit.py  model.py  telegram_push.py  user.py
src/domain/validators/: dto.py
src/infrastructure/: enum.py  enums.py
src/infrastructure/managers/: amocrm_client.py  auth_client.py  base.py  http_manager.py  jwt_manager.py  paginator.py  recaptcha_client.py  telegram_client.py  unisender_client.py
src/infrastructure/models/alchemy/: base.py  forms.py
src/infrastructure/repositories/alchemy/: base.py  comments.py  db.py  form_orders.py  telegram_pushes.py
src/infrastructure/repositories/interfaces/: base.py
src/infrastructure/uow/: __init__.py  alchemy.py  base.py
src/tests/: conftest.py  utils.py
src/tests/e2e/base/: conftest.py  test_auth.py  test_check_health.py
src/tests/factories/: user.py
src/tests/integration/use_cases/: conftest.py  params.py  test_crud.py
src/tests/unit/entities/: test_user.py
